--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -2,7 +2,12 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
+      <item name="android:windowNoTitle">true</item>
+      <item name="android:windowActionBar">false</item>
+      <item name="android:windowFullscreen">true</item>
+      <item name="android:windowContentOverlay">@null</item>
+      <item name="android:windowBackground">@drawable/bacon</item>      
+      <!-- Customize your theme here. -->
     </style>
 
 </resources>
