--- a/ios/Bacon/Base.lproj/LaunchScreen.xib
+++ b/ios/Bacon/Base.lproj/LaunchScreen.xib
@@ -15,12 +15,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" fixedFrame="YES" image="bg_intro" translatesAutoresizingMaskIntoConstraints="NO" id="IY0-o8-xGV">
+                <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" image="bg_intro" translatesAutoresizingMaskIntoConstraints="NO" id="IY0-o8-xGV">
                     <rect key="frame" x="0.0" y="-1" width="375" height="668"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 </imageView>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="ico_intro_logo" translatesAutoresizingMaskIntoConstraints="NO" id="9CO-JX-3Fl">
-                    <rect key="frame" x="113" y="178" width="148" height="144"/>
+                    <rect key="frame" x="113" y="261" width="148" height="144"/>
                     <autoresizingMask key="autoresizingMask"/>
                 </imageView>
             </subviews>
